# customShop

./: .gitignore  README.md  manage.py  pyproject.toml
api/: urls.py
app/products/: apps.py  models.py
app/user/: models.py  serializers.py  urls.py  views.py
app/users/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
customshop/: asgi.py  urls.py  wsgi.py
customshop/settings/: base.py
